--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "validator": "^13.12.0"
   },
   "scripts": {
     "dev:start": "nodemon src/server.js"
